syntax = "proto3";

package rs.jig.common;

enum Level {
    // The "error" level.
    //
    // Designates very serious errors.
    ERROR = 0;
    // The "warn" level.
    //
    // Designates hazardous situations.
    WARN = 1;
    // The "info" level.
    // Designates useful information.
    INFO = 2;
    // The "debug" level.
    //
    // Designates lower priority information.
    DEBUG = 3;
    // The "trace" level.
    //
    // Designates very low priority, often extremely verbose, information.
    TRACE = 4;
}

// The value of the key-value pair.
message Value {
    oneof inner {
        // A value serialized to a string using `fmt::Debug`.
        string debug_val = 2;
        // A string value.
        string str_val = 3;
        // An unsigned integer value.
        uint64 u64_val = 4;
        // A signed integer value.
        sint64 i64_val = 5;
        // A boolean value.
        bool bool_val = 6;
    }
}